TestCases/Errors/Haversine/observations/sst/aut_09_obs.spm
obs r15-c5 0.00037593984962406
obs r16-c5 0.000107228107750506
obs r17-c5 0.000135015424541397
obs r15-c6 0.000240271964983023
obs r16-c6 0.000235671114609978
obs r17-c6 6.94818964347354e-05
obs r15-c7 0.000527275953245084
obs r16-c7 0.000232485165203056
obs r5-c12 0.00475139146567718
obs r9-c18 0.007
obs r8-c19 0.0186666666666667
obs r9-c19 0.014625
obs r5-c20 0.003
obs r9-c20 0.00971428571428571
obs r10-c20 0.0102142857142857
error_value r15-c5 0.2
error_value r16-c5 0.2
error_value r17-c5 0.2
error_value r15-c6 0.2
error_value r16-c6 0.2
error_value r17-c6 0.2
error_value r15-c7 0.2
error_value r16-c7 0.2
error_value r5-c12 0.2
error_value r9-c18 0.2
error_value r8-c19 0.2
error_value r9-c19 0.2
error_value r5-c20 0.2
error_value r9-c20 0.2
error_value r10-c20 0.2
